# vibeval

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
docs/plans/: 2026-04-10-contract-phase-rewrite.md  2026-04-13-agent-tool-validation.md  2026-04-14-cli-full-validation.md  2026-04-14-review-fixes-0.6.0.md
docs/specs/: 2026-04-13-agent-tool-validation-design.md  2026-04-14-cli-full-validation.md
examples/meeting_app/: .vibeval.yml  llm_client.py  summarizer.py  transcript_api.py
plugin/: plugin.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/agents/: consultant.md  data-synthesizer.md  evaluator.md
plugin/commands/: vibeval-analyze.md  vibeval-design.md  vibeval-generate.md  vibeval-run.md  vibeval-update.md  vibeval.md
plugin/protocol/: README.md
plugin/protocol/references/: 00-philosophy.md  01-overview.md  02-dataset.md  03-judge-spec.md  05-comparison.md  06-contract.md  07-agent-tools.md
plugin/skills/analyze/: SKILL.md
plugin/skills/code/: SKILL.md
src/vibeval/: __init__.py  cli.py  compare.py  config.py  conversation.py  dataset.py  judge.py  llm.py  report.py  result.py  rules.py  validate.py  validate_analysis.py  validate_design.py
tests/: test_compare.py  test_conversation.py  test_judge.py  test_llm.py  test_output_language.py  test_report.py  test_result.py  test_rules.py  test_serve_api.py  test_serve_json_tree.py  test_target.py  test_validate.py  test_validate_agent.py
tests/serve_static/: test_json_tree.js
(+27 files in other folders)
